fix(queue): prevent DateTimeException when joining queue and persist queuePosition